<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetDataFragment">


    <Button
        android:id="@+id/btnGetDataJSON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGetDataJSON"
        android:textAllCaps="false"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvJsonData" />

    <TextView
        android:id="@+id/tvJsonData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvJsonData"
        android:textSize="24sp"
        android:layout_marginTop="340dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvJsonDataState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvDataState"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>